--- a/propose/style.css
+++ b/propose/style.css
@@ -22,15 +22,38 @@
 .input-text-field {
     color: rgba(255, 255, 255, .6);
     position: relative;
-}
-
-.input-text-field input {
     background-color: var(--elevation1dp);
     height: 56px;
     border-radius: 4px 4px 0 0;
-    margin: 0;
-    padding: 0;
+}
+
+.input-text-field input {
+    background-color: initial;
+    color: rgba(255, 255, 255, .87);
+    width: 100%;
+    height: 100%;
+    padding: 20px 16px 6px;
     border: none;
+    border-bottom: 1px solid rgba(255, 255, 255, 0.42);
+    caret-color: var(--primary);
+}
+
+.input-text-field:hover {
+    background-color: var(--elevation2dp);
+}
+
+.input-text-field input:focus {
+    border-bottom-color: var(--primary);
+    outline: none;
+    background-color: var(--elevation3dp);
+}
+
+.input-text-field input:focus+label {
+    color: var(--primary);
+}
+
+.input-text-field input:hover {
+    border-bottom-color: rgba(255, 255, 255, .87);
 }
 
 .input-text-field label {
@@ -40,4 +63,10 @@
     transform: translateY(-50%);
     pointer-events: none;
     position: absolute;
+    transform-origin: left top;
+    transition: transform 150ms cubic-bezier(0.4, 0, 0.2, 1), color 150ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.input-text-field input:focus+label {
+    transform: translateY(-106%) scale(0.75);
 }
